--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-
+    compile 'com.android.support:palette-v7:23.1.1'
 }
