--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Network State Permissions -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -46,6 +49,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.app.movie.cinephilia.DetailsActivity" />
         </activity>
+
+        <provider
+            android:authorities="com.app.movie.cinephilia"
+            android:name=".MovieDBAPIs.MovieProvider"
+            android:exported="true"
+            android:enabled="true"/>
 
     </application>
 
