--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.android.support:palette-v7:23.1.1'
+    compile 'com.facebook.stetho:stetho:1.3.0'
+    compile 'com.facebook.stetho:stetho-urlconnection:1.3.0'
 }
