--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -58,6 +59,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.app.movie.cinephilia.DetailsActivity" />
         </activity>
+        <activity
+            android:name=".MovieSearchActivity"
+            android:label="@string/title_search_activity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme"
+            android:launchMode="singleTop">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+
 
         <provider
             android:authorities="com.app.movie.cinephilia"
